# pds

./: .gitignore  BUILD  Gopkg.toml  Vagrantfile  WORKSPACE  makefile  modd.conf
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  docker-eventstore  docker-kafka  docker-registry  docker-zookeeper  id  index_uuid  private_key  synced_folders  vagrant_cwd
ci/: build.sh  clean.sh  deploy-service.sh  dev-build.sh  test.sh
nomad/: fabio_development.nomad  linkerd_development.nomad
service.hello/: BUILD.bazel  main.go  service.hello.development.nomad
service.hello.api/: BUILD.bazel  main.go  service.hello.api.development.nomad
service.hello.api/handlers/: BUILD.bazel  handlers.go  handlers_test.go
service.hello/proto/: BUILD.bazel  hello.pb.go  hello.proto
service.tracking.api/: BUILD.bazel  main.go  service.tracking.api.development.nomad
service.tracking.api/proto/: BUILD.bazel  tracking.pb.go  tracking.proto
vagrant/: dev-watch.sh  provision.sh
