load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vectorhacker/pds/service.hello.api",
    visibility = ["//visibility:private"],
    deps = [
        "//service.hello.api/handlers:go_default_library",
        "//service.hello/proto:go_default_library",
        "//vendor/github.com/gorilla/pat:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "service.hello.api",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    static = "on",
    visibility = ["//visibility:public"],
)

# docker
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "docker",
    # References container_pull from WORKSPACE (above)
    base = "@alpine_base//image",
    cmd = ["./service.hello.api"],
    files = [":service.hello.api"],
    visibility = ["//visibility:public"],
)
