load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["handlers.go"],
    importpath = "github.com/vectorhacker/pds/service.hello.api/handlers",
    visibility = ["//visibility:public"],
    deps = ["//service.hello/proto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["handlers_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//service.hello/proto:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
